[package]
name = "hacaoi"
description = "HaCaOI - Hades Cap Of Invisibilty - a facade rust library crate for encryption and decryption"
version = "0.1.11"
edition = "2021"
authors = ["Sven Putze <github@hardcodes.de>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hardcodes/hacaoi"
# for now publishing to crates.io is not intended
publish = false

[dependencies]
aes = { version = "0.8.4", optional = true }
base64 = { version = "0.22.1", optional = true }
cbc = { version = "0.1.2", optional = true }
openssl = { version = "0.10", optional = true }
# stay on 0.8, dependency to rust crypto rsa
rand = { version = "0.8" }
# needed features:
# - pkcs5: load encrypted rsa private key
# - sha2:  sha512 signature creation and validation
rsa = { version = "0.9.7", features = ["pkcs5", "sha2"], optional = true }
zeroize = "1.8"


[features]
default = ["rust-crypto", "openssl", "b64"]
openssl = ["dep:openssl"]
rust-crypto = ["dep:aes", "dep:cbc", "dep:rsa"]
b64 = ["dep:base64"]