[package]
name = "hacaoi"
description = "HaCaOI - Hades Cap Of Invisibilty - a rust library crate as a facade for encryption and decryption"
version = "0.2.9"
edition = "2021"
authors = ["Sven Putze <github@hardcodes.de>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hardcodes/hacaoi"
# for now publishing to crates.io is not intended
publish = false

[dependencies]
aes = { version = "0.9.0", optional = true }
base64 = { version = "0.22.1", optional = true }
cbc = { version = "0.2.1", optional = true }
openssl = { version = "0.10.80", optional = true }
# must stay at 0.10.6 for now, higher versions are not compatible with rsa 0.9.10
sha1 = { version = "0.10.6", optional = true }
# stay on 0.8, dependency to rust crypto rsa
rand = { version = "0.8" }
# needed rsa features:
# - pkcs5: load encrypted rsa private key
# - sha2:  sha512 signature creation and validation
# - sha1:  sha1 or OAEP or PSS padding
#
# version 10 is not released yet.
rsa = { version = "0.9.10", features = ["pkcs5", "sha2", "sha1"], optional = true }
zeroize = "1.8"


[features]
default = ["rust-crypto", "openssl", "b64"]
openssl = ["dep:openssl"]
rust-crypto = ["dep:aes", "dep:cbc", "dep:rsa", "dep:sha1"]
b64 = ["dep:base64"]
